<resources>
    <string name="app_name">Lifetrack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">TASKS</string>
    <string name="news">NEWS</string>
    <string name="results">RESULTS</string>
    <string name="home">HOME</string>
    <string name="welcome_to_productive_life">Welcome to productive life</string>
    <string name="collaboration_with_students">Collaboration with students</string>
    <string name="sign_in">Sign in</string>
    <string name="skip">Skip</string>
    <string name="you_have_already_an_account">You have already an account?</string>
    <string name="gdg">gdg</string>
    <string name="write_anything_you_want">Write anything you want</string>
    <string name="due_data">Due data</string>
    <string name="repeat">Repeat</string>
    <string name="_1_20_22">1/20/22</string>
    <string name="add_new_task">Add new task</string>
    <string name="due_date">Due date</string>
    <string name="back_to_task_list">Back to task list</string>
    <string name="go_to_create">Go to create</string>
    <string name="custom">Custom</string>
    <string name="every_year">Every year</string>
    <string name="every_month">Every month</string>
    <string name="every_week">Every week</string>
    <string name="every_day">Every day</string>
    <string name="never">Never</string>
    <string name="repeat_task">Repeat task</string>
    <string name="add_extra_task">ADD EXTRA TASK</string>
    <string name="lifetrack">Lifetrack</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="lifetrack_icon">Lifetrack icon</string>
    <string name="your_verification_code">Your verification code</string>
    <string name="send_phone_number">Send phone number</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="your_number">Your number</string>
    <string name="number">Number</string>
    <string name="verification_code">Verification code</string>
    <string name="submit_verification_code">Submit verification code</string>
    <string name="already_using_lifetrack">Already using Lifetrack?</string>
    <string name="welcome_aboard">Welcome aboard!</string>
    <string name="get_started">Get started</string>
    <string name="reach_your_goals_faster_and_keep_your_personal_and_professional_life_in_order">Reach your goals faster and keep your personal and professional life in order</string>
    <string name="user_icon_for_toolbar">user icon for toolbar</string>
    <string name="profile">profile</string>
    <string name="icon">icon</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="submit_your_changes">Submit your changes</string>
    <string name="save_your_profile">Save your profile</string>
    <string name="read_your_changes">Read your changes</string>
</resources>