<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@android:color/holo_red_light"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_bold"
        android:paddingTop="12dp"
        android:text="@string/repeat_task"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <RadioGroup
        android:id="@+id/r_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/tv_repeat">

        <RadioButton
            android:id="@+id/radioBtn_never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/never" />

        <RadioButton
            android:id="@+id/radioBtn_daily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_day" />

        <RadioButton
            android:id="@+id/radioBtn_weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_week" />

        <RadioButton
            android:id="@+id/radioBtn_monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_month" />

        <RadioButton
            android:id="@+id/radioBtn_yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/every_year" />


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>