<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".ui.fragments.notes.CreateNotesFragment">

    <EditText
        android:id="@+id/et_task"
        style="@style/EditTextTaskFragment"
        android:autofillHints="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_hint"
        style="@style/DueDataAndRepeatHintsTaskFragment"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task" />

    <TextView
        android:id="@+id/tv_frequency_hint"
        style="@style/DueDataAndRepeatHintsTaskFragment"
        android:text="@string/repeat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_task" />

    <TextView
        android:id="@+id/tv_date_choose"
        style="@style/DueDataAndRepeatTaskFragment"
        android:text="@string/_1_20_22"
        app:drawableEndCompat="@drawable/ic_calendar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />

    <TextView
        android:id="@+id/tv_frequency_choose"
        style="@style/DueDataAndRepeatTaskFragment"
        android:text="@string/every_week"
        app:drawableEndCompat="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_date_hint" />

    <Button
        android:id="@+id/btn_add_task"
        style="@style/ProximaRegularButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_green_rectangle_background"
        android:padding="12dp"
        android:text="@string/add_new_task"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tv_date_choose" />

    <TextView
        android:id="@+id/tv_back_to_list"
        style="@style/ProximaBoldTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/back_to_task_list"
        android:textSize="@dimen/default_textview_size"
        app:layout_constraintTop_toBottomOf="@id/btn_add_task" />

</androidx.constraintlayout.widget.ConstraintLayout>