<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_productive_life"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/collaboration_with_students"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/boarding_animation"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/skip_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="8dp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="@dimen/default_textview_size"
        app:iconGravity="textEnd"
        app:iconTint="@android:color/holo_blue_light" />

    <TextView
        android:id="@+id/tv_hint"
        style="@style/BoardingTextViews"
        android:layout_marginVertical="24dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/you_have_already_an_account"
        android:textColor="@android:color/darker_gray" />

    <TextView
        android:id="@+id/btn_sign_in"
        style="@style/BoardingTextViews"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_in"
        android:textColor="@android:color/holo_blue_light" />


</LinearLayout>